Fix: ìNoteEntity 수정